# odoo-dev-mcp

./: .gitignore  README.md  pyproject.toml
src/odoo_dev_mcp/: __init__.py  cli.py  config.py  graph_html.py  prompts.py  registry.py  version_detect.py
src/odoo_dev_mcp/db/: connection.py  schema.py
src/odoo_dev_mcp/indexer/: behavioral.py  crosslayer.py  crossref.py  decorators.py  hashing.py  js.py  module_scanner.py  pipeline.py  security.py  structural.py
src/odoo_dev_mcp/parsers/: js_parser.py  python_parser.py  xml_parser.py
src/odoo_dev_mcp/server/: multi.py  single.py
src/odoo_dev_mcp/tools/: .fuse_hidden0000000900000005  __init__.py  analyze_change_impact.py  build_index.py  get_access_control.py  get_constraints.py  get_field_visibility.py  get_http_routes.py  get_index_status.py  get_method_logic.py  get_model_actions.py  get_model_graph.py  get_model_schema.py  get_project_context.py  get_state_machine.py  registry.py  resolve_xml_view.py  search_entities.py  trace_business_flow.py  trace_button_to_method.py  trace_compute_chain.py  trace_path.py
tests/: conftest.py  test_override_detection.py
